# bSmell

./: Cargo.toml  README.md  package.json
.github/workflows/: ci.yml
crates/bsmell/: Cargo.toml
crates/bsmell/src/: cli.rs  error.rs  evidence_state.rs  invocation_surface.rs  lib.rs  main.rs  scan.rs  substrate_input.rs  taxonomy.rs
crates/bsmell/tests/: cli.rs  error.rs  evidence_state.rs  invocation_surface.rs  library_surface.rs  substrate_input.rs  taxonomy.rs
crates/bsmell/tests/common/: mod.rs
scripts/: public_voice_guard.sh
