[package]
name = "bsmell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI deflection-pattern detector. Reads session text; emits flagged-pattern directive."
repository.workspace = true
readme = "../../README.md"

[lib]
name = "bsmell"
path = "src/lib.rs"

[[bin]]
name = "bsmell"
path = "src/main.rs"

[dependencies]
bsuite-core = { git = "https://github.com/bvasilenko/bsuite-core", branch = "main" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest.workspace = true
serde_json.workspace = true
