[package]
name = "bsmell"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prompt lookup tool. Agent names a smell category from a fixed list; bsmell returns the prompt for that smell category. The prompt tells the agent how to check the session for that smell."
repository.workspace = true
readme = "../../README.md"

[lib]
name = "bsmell"
path = "src/lib.rs"

[[bin]]
name = "bsmell"
path = "src/main.rs"

[dependencies]
bsuite-core = { git = "https://github.com/bvasilenko/bsuite-core", branch = "main" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
proptest.workspace = true
serde_json.workspace = true
